[gd_scene load_steps=4 format=3 uid="uid://btsarn8jiclmg"]

[ext_resource type="Script" path="res://scenes/menu/menu_manager.gd" id="1_lkrau"]
[ext_resource type="PackedScene" uid="uid://lrtgfxdhlk13" path="res://scenes/menu/main_menu/main_menu.tscn" id="2_5rg1g"]
[ext_resource type="PackedScene" uid="uid://c8ew1lrlsxjut" path="res://scenes/menu/pause_menu/pause_menu.tscn" id="3_0efj6"]

[node name="MenuManager" type="Node"]
script = ExtResource("1_lkrau")

[node name="MainMenu" parent="." instance=ExtResource("2_5rg1g")]
unique_name_in_owner = true

[node name="PauseMenu" parent="." instance=ExtResource("3_0efj6")]
unique_name_in_owner = true
